HEAD
	+ Added missing EBox::Exceptions uses
3.2
	+ Set version to 3.2
3.1.6
	+ Override daemons when migrating from 3.0
3.1.5
	+ Improved the way we handle L2TP daemons.
3.1.4
	+ Fixed the AD support to retrieve Groups from AD directly and default on
	  Domain users group.
	+ Stability fixes with default configuration.
3.1.3
	+ Postrouting rules have no oaccept chain, use ACCEPT target
	+ Added menu icon
	+ Adapt L2TP firewall rules to new accept chains
	+ Adapt firewall rules to new accept chains
	+ Updated to use the new security group concept.
3.1.2
	+ Fixed the connection validation form so the enable / disable checkbox
	  works.
	+ Block the connection enabling if the tunnel configuration does not pass
	  validation.
3.1.1
	+ Fixed bug in Users model when zentyal-samba is not installed
3.1
	+ Added support for IPsec/L2TP
	+ Added Pre-Depends on mysql-server to avoid problems with upgrades
	+ Depend on zentyal-core 3.1
3.0.2
	+ Disabled connection names with spaces
3.0.1
	+ Removed inappropiate local subnet checks
	+ Adapted to changes in EBox::LogHelper::_convertTimestamp
	+ Added lsof as dependency as it is needed for 'ipsec verify'
	+ Removed unnecesary unique attributes in ConfGeneral form
2.3.4
	+ IPsec is now under Infrastructure instead of UTM
	+ Added checks to local and remote subnets addresses
2.3.3
	+ Added any IP to remote address options
2.3.2
	+ Adapted to new Model management framework
2.3.1
	+ Create tables with MyISAM engine by default
2.3
	+ Added loghelper support
	+ Replaced autotools with zbuildtools
	+ Deleted confkey copied from VPN module
2.1.6
	+ Set disableAutocomplete for general IPSec configuration form
2.1.5
	+ Removed /zentyal prefix from URLs
2.1.4
	+ Fixed FirewallHelper crash during save changes when subnet not defined
	+ Delete empty enable-module scripts to avoid a useless sudo sh execution
2.1.3
	+ Fixed argument passing in constructor, readonly instances now work
	+ Added some help messages
2.1.2