@@ -283,4 +283,31 @@ sub acquireVPNConfigurationModel
     }
 }
 
+# Method: precondition
+#
+#   Overrid <EBox::Model::DataTable::precondition>
+#
+#   Num of external interfaces > 0
+sub precondition
+{
+    my ($self) = @_;
+    my $network = $self->global()->modInstance('network');
+    return (scalar(@{$network->ExternalIfaces()}) > 0);
+}
+
+# Method: preconditionFailMsg
+#
+#   Overrid <EBox::Model::DataTable::preconditionFailMsg>
+#
+sub preconditionFailMsg
+{
+
+    return __x("IPsec can only be configured on interfaces tagged as 'external'"
+                   . ' Check your interface '
+                   . 'configuration to match, at '
+                   . '{openhref}Network->Interfaces{closehref}',
+               openhref  => '<a href="/Network/Ifaces">',
+               closehref => '</a>');
+}
+
 1;
